# hascope

./: CHANGELOG.md  fib.k  fib.ks  hascope.cabal  hascope.code-workspace  readme.md
app/: Main.hs
src/: Codegen.hs  Emit.hs  JIT.hs  Lexer.hs  Parser.hs  Syntax.hs
